--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>The dumbest Calculator</h1>
+        <h1>The Dumbest Calculator</h1>
     </header>
     <section>
         <input id="number_input" type="number">
